--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Regen Screenshoot.sketch
 Regen Screenshot.jpg
 Regen Screenshot@2x.jpg
 Regen Screenshot.sketch
+Regen Social Image.jpg
+Regen Social Image.sketch
